Tried to add a nav bar, and fixed the spacing of the background images
Need to redo the navbar, bc it kinda sucks and I don't know hwo to to implement it

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+* {
+  overflow-y: visible;
+  overflow-x: hidden;
+}
 .App {
   text-align: center;
 }
@@ -5,6 +9,24 @@ section{
   position: relative;
   height: 110vh;
   width: 100vw;
+
+}
+.NavBar{
+  position: absolute;
+  width: 80vw;
+  height: 140px;
+  z-index: 100;
+  translate: calc(50vw - 40vw) 40px;
+  background-image: url('background-images/Outer\ Nav\ Bar.png');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size:100% 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+.Hole {
 
 }
 .Home{
@@ -21,15 +43,33 @@ section{
   background-position-x:right;
   background-repeat:no-repeat;
   background-size:cover;
-  height: 140vh !important;
-  z-index:f;
+  height: 135vh !important; /*if the height is too small, it clips the image*/
+  padding-top: 5vh;
+  position: absolute;
+  z-index: 2;
   
 }
 .Projects{
-  background-color: #3A414F;
+  background-image: url('background-images/screen\ 3.png');
+  background-position-x:right;
+  background-repeat:no-repeat;
+  background-size:cover;
+  height: 125vh !important;  
+  padding-top: 25vh;
+  translate: 0 120vh;
+  position: absolute;
+  z-index: 1;
 }
 .Clubs{
-  background-color: #D9D9D9;
+  background-image: url('background-images/screen\ 4.png');
+  background-position-x:right;
+  background-repeat:no-repeat;
+  background-size:cover;
+  height: 115vh !important;
+  padding-top:25vh;
+  translate: 0 250vh;
+  position:absolute;
+  z-index: 0;
 }
 footer{
   background-color: #FFFFFF;
